--- a/src/theme/_theme.variables.scss
+++ b/src/theme/_theme.variables.scss
@@ -4,6 +4,26 @@ html {
   &.plt-mobile {
     @include css-variables-to-root-mobile();
   }
+
+  --ion-color-step-50: #f3f3f3;
+  --ion-color-step-100: #e7e7e7;
+  --ion-color-step-150: #dbdbdb;
+  --ion-color-step-200: #d0d0d0;
+  --ion-color-step-250: #c4c4c4;
+  --ion-color-step-300: #b8b8b8;
+  --ion-color-step-350: #acacac;
+  --ion-color-step-400: #a0a0a0;
+  --ion-color-step-450: #949494;
+  --ion-color-step-500: #898989;
+  --ion-color-step-550: #7d7d7d;
+  --ion-color-step-600: #717171;
+  --ion-color-step-650: #656565;
+  --ion-color-step-700: #595959;
+  --ion-color-step-750: #4d4d4d;
+  --ion-color-step-800: #414141;
+  --ion-color-step-850: #363636;
+  --ion-color-step-900: #2a2a2a;
+  --ion-color-step-950: #1e1e1e;
 }
 
 /*
@@ -12,9 +32,6 @@ html {
  */
 
 html.dark {
-  // scroll bar
-  color-scheme: dark;
-
   @include css-variables-to-root-dark();
 
   --ion-color-primary: #428cff;
@@ -80,23 +97,16 @@ html.dark {
   --ion-color-light-contrast-rgb: 255, 255, 255;
   --ion-color-light-shade: #1e2023;
   --ion-color-light-tint: #383a3e;
-
-  --ion-background-color: #000000;
-  --ion-background-color-rgb: 0, 0, 0;
   --ion-toolbar-background: #1f1f1f;
-  --ion-text-color: #ffffff;
-  --ion-text-color-rgb: 255, 255, 255;
   --ion-border-color: #222222;
-  --ion-backdrop-color: #ffffff;
 
-  --app-form-color-disabled: #949494;
-  --app-form-color: var(--ion-color-light-contrast);
   --app-form-field-background-color: var(--ion-color-light-tint);
   --app-form-field-background-color-shade: #282828;
+  --app-form-field-focus-background-color: #{$app-form-field-focus-background-color};
   --app-form-field-disabled-background-color: #282828;
   --app-form-field-label-color: #949494;
   --app-form-field-disabled-label-color: #7d7d7d;
-  --mat-select-panel-background-color: var(--ion-color-step-100);
+  --mat-select-panel-background-color: #2a2a2a;
 
   ion-menu#menu {
     --ion-item-text-color-selected: var(--ion-color-secondary100-contrast);
@@ -105,6 +115,14 @@ html.dark {
     ion-item.selected:hover {
       --ion-item-text-color-selected: var(--ion-color-secondary100-contrast) !important;
       --ion-item-icon-color-selected: var(--ion-color-secondary100-contrast) !important;
+    }
+  }
+
+  .mat-expansion-panel.filter-panel {
+    .form-container {
+      --app-form-color: var(--ion-color-secondary-color-contrast);
+      --app-form-field-background-color: unset;
+      --app-form-field-focus-background-color: unset;
     }
   }
 }
@@ -150,4 +168,24 @@ html.md.dark {
   --ion-item-background: #1e1e1e;
   --ion-tab-bar-background: #1f1f1f;
   --ion-card-background: #1e1e1e;
+
+  --ion-color-step-50: #1e1e1e;
+  --ion-color-step-100: #2a2a2a;
+  --ion-color-step-150: #363636;
+  --ion-color-step-200: #414141;
+  --ion-color-step-250: #4d4d4d;
+  --ion-color-step-300: #595959;
+  --ion-color-step-350: #656565;
+  --ion-color-step-400: #717171;
+  --ion-color-step-450: #7d7d7d;
+  --ion-color-step-500: #898989;
+  --ion-color-step-550: #949494;
+  --ion-color-step-600: #a0a0a0;
+  --ion-color-step-650: #acacac;
+  --ion-color-step-700: #b8b8b8;
+  --ion-color-step-750: #c4c4c4;
+  --ion-color-step-800: #d0d0d0;
+  --ion-color-step-850: #dbdbdb;
+  --ion-color-step-900: #e7e7e7;
+  --ion-color-step-950: #f3f3f3;
 }
